레이아웃 변경(모바일/데스크톱 이분화), 화면 확대 시 footer 위치 이상해지는 오류 해결, router 추가, 검색바의 위아래 키 기능 추가

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="public/favicon_black.ico"
+      href="/favicon_black.ico"
       media="(prefers-color-scheme: light)"
     />
     <link
       rel="icon"
-      href="public/favicon_white.ico"
+      href="/favicon_white.ico"
       media="(prefers-color-scheme: dark)"
     />
     <link
