--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="강아지가 먹어도 되는 음식인지 검색해보세요. 안전한 음식과 위험한 음식 정보를 제공합니다."
+    />
+    <meta
+      name="keywords"
+      content="강아지 음식, 강아지 먹을 수 있는 음식, 강아지 안전 음식, 강아지 음식 검색, 반려견 식이, 강아지 독성 음식, 강아지 간식 추천, 강아지 과일, 강아지 채소, 강아지 알레르기 음식"
+    />
     <meta charset="UTF-8" />
     <link
       rel="icon"
