구글 광고 삽입

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       content="강아지 음식, 강아지 먹을 수 있는 음식, 강아지 안전 음식, 강아지 음식 검색, 반려견 식이, 강아지 독성 음식, 강아지 간식 추천, 강아지 과일, 강아지 채소, 강아지 알레르기 음식"
     />
     <meta charset="UTF-8" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9957830054594744"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="icon"
       href="/favicon_black.ico"
