--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       name="keywords"
       content="강아지 음식, 강아지 먹을 수 있는 음식, 강아지 안전 음식, 강아지 음식 검색, 반려견 식이, 강아지 독성 음식, 강아지 간식 추천, 강아지 과일, 강아지 채소, 강아지 알레르기 음식"
     />
+    <meta
+      name="naver-site-verification"
+      content="b0048bce0e335d961d0d94e385dca1dc8d1bf1a3"
+    />
+
     <meta charset="UTF-8" />
     <script
       async
