og 태그 추가 및 robot.txt 추가

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       name="naver-site-verification"
       content="b0048bce0e335d961d0d94e385dca1dc8d1bf1a3"
     />
-
+    <meta property="og:title" content="DogNoEat - 강아지 안전 음식 검색" />
+    <meta
+      property="og:description"
+      content="강아지가 먹어도 되는 음식과 위험한 음식을 검색하세요. 안전한 반려견 식단 정보를 제공합니다."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dognoeat.com" />
+    <meta property="og:image" content="https://dognoeat.com/main.jpg" />
     <meta charset="UTF-8" />
     <script
       async
