robots meta tag 추가

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       name="naver-site-verification"
       content="b0048bce0e335d961d0d94e385dca1dc8d1bf1a3"
     />
+    <meta name="robots" content="index, follow" />
     <meta property="og:title" content="DogNoEat - 강아지 안전 음식 검색" />
     <meta
       property="og:description"
